# sport_visual

./: Cargo.toml  readme.txt
animations/: Rec_0412_new1.txt  data11.txt  data16.txt  data19.txt  data21.txt  data24.txt  data29.txt  data30.txt  data31.txt  data32.txt  data33.txt  data35.txt  data36.txt  data37.txt  data39.txt  data40.txt
animations/new/: Rec_0424_144832.txt  Rec_0424_162145.txt  Rec_0424_163302.txt  Rec_0424_171149.txt  Rec_0424_172810.txt
models/: ballerina.stl  conus.stl  cube2.stl  sphere.stl  sphere2.stl  sphere3.stl  union.stl
src/: lib.rs  madgwick.rs  main.rs
src/primitives/: mesh.rs  mod.rs  point.rs  triangle.rs  vector.rs
